-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b29
-
x86
-
linux
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8056387 | emb-9 | Zhengyu Gu | P2 | Resolved | Fixed | b29 |
| JDK-8063424 | 8u45 | Unassigned | P2 | Resolved | Fixed | b01 |
| JDK-8056295 | 8u40 | Zhengyu Gu | P2 | Closed | Fixed | b04 |
| JDK-8070978 | emb-8u47 | Unassigned | P2 | Resolved | Fixed | team |
runtime/NMT/BaselineWithParameter.java
runtime/NMT/JcmdBaselineDetail.java
runtime/NMT/JcmdScale.java
runtime/NMT/JcmdScaleDetail.java
runtime/NMT/ShutdownTwice.java
runtime/NMT/SummaryAfterShutdown.java
hit the following assert:
# Internal Error (/opt/jprt/T/P1/160847.ctornqvi/s/src/share/vm/services/virtualMemoryTracker.cpp:332), pid=2359, tid=1451232144
# Error: ShouldNotReachHere()
Stack:
V [libjvm.so+0xa9c128] VMError::report_and_die()+0x198
V [libjvm.so+0x3c771a] report_should_not_reach_here(char const*, int)+0x7a
V [libjvm.so+0xa8e8c4] VirtualMemoryTracker::add_reserved_region(unsigned char*, unsigned int, NativeCallStack const&, MemoryType, bool)+0x144
V [libjvm.so+0x8a8540] os::map_memory(int, char const*, unsigned int, char*, unsigned int, bool, bool)+0x100
V [libjvm.so+0x419f71] FileMapInfo::map_region(int)+0x61
V [libjvm.so+0x81641a] MetaspaceShared::map_shared_spaces(FileMapInfo*)+0x4a
V [libjvm.so+0x8136a8] Metaspace::global_initialize()+0x428
V [libjvm.so+0xa5171d] universe_init()+0x5d
V [libjvm.so+0x4fc441] init_globals()+0x61
V [libjvm.so+0xa345c4] Threads::create_vm(JavaVMInitArgs*, bool*)+0x224
V [libjvm.so+0x647218] JNI_CreateJavaVM+0x88
C [libjli.so+0x5edd] JavaMain+0x8d
C [libpthread.so.0+0x632f] start_thread+0xbf
C [libc.so.6+0xde20e] clone+0x5e
- backported by
-
JDK-8056387 assert at share/vm/services/virtualMemoryTracker.cpp:332 Error: ShouldNotReachHere() when running NMT tests
-
- Resolved
-
-
JDK-8063424 assert at share/vm/services/virtualMemoryTracker.cpp:332 Error: ShouldNotReachHere() when running NMT tests
-
- Resolved
-
-
JDK-8070978 assert at share/vm/services/virtualMemoryTracker.cpp:332 Error: ShouldNotReachHere() when running NMT tests
-
- Resolved
-
-
JDK-8056295 assert at share/vm/services/virtualMemoryTracker.cpp:332 Error: ShouldNotReachHere() when running NMT tests
-
- Closed
-
- blocks
-
JDK-8054711 [TESTBUG] Enable NMT2 tests after NMT2 is integrated
-
- Closed
-