8055061: assert at share/vm/services/virtualMemoryTracker.cpp:332 Error: ShouldNotReachHere() when running NMT tests

Handled CDS mapping region and added test for the scenario

Reviewed-by: coleenp, ctornqvi